fixed appearance issue on mobile, scaled down images, added a couple new images

--- a/css/af-footer-style.css
+++ b/css/af-footer-style.css
@@ -15,3 +15,20 @@
 	height: 200px;
 	width: 100%;
 }
+
+@media only screen and (max-device-width: 480px) {
+	.footer p {
+		text-align: center;
+		font-family: Teko;
+		padding-top: 175px;
+		color: #fff;
+		font-size: 2em;
+		font-weight: lighter;
+		text-transform: uppercase;
+	}
+	.footer {
+		background-color: #000;
+		height: 400px;
+		width: 100%;
+	}
+}
