--- a/css/index-mobile.css
+++ b/css/index-mobile.css
@@ -1,20 +1,66 @@
 @charset "UTF-8";
 /* Mobile CSS for Index */
+@media only screen and (max-device-width: 480px) {
 
-@media only screen and (max-width: 480px) {
+	.logo h1 {
+		font-size: 50px;
+		margin-top: 20px;
+		margin-left: 20px;
+	}
 	.home-hero h1 {
 		position: absolute;
-		top: 17%;
-		left: 35%;
+		top: 45%;
+		left: 26%;
 		transform: translate(-20%, -20%);
-		font-size: 40px;
+		width: 80%;
+		text-align: center;
+		font-size: 140px;
+	}
+	.home-content1 p {
+		padding-top: 1em;
 	}
 	.home-content1 p {
 		padding-left: 0px;
 		padding-right: 0px;
 		width: 77%;
 	}
+	.home-content1 h6 {
+		width: 80%;
+		font-size: 10px;
+	}
 	.home-content1 h4 {
 		width: 80%;
+		font-size: 80px;
+	}
+  .menu-background {
+		background-color: #000;
+		height: 150px;
+		position: fixed;
+		width: 100%;
+		z-index: 50;
+	}
+	.home-hero {
+		height: 100vh;
+		width: auto;
+	}
+	.home-hero-image {
+		width: auto ;
+	  max-width: auto ;
+	  height: 100vh ;
+		background-size: cover;
+	}
+	.buttons-style {
+		padding-top: 10px;
+		font-size: 16px;
+	}
+	.button {
+		margin-top: 80px;
+		margin-bottom: 20px;
+	}
+	.footer {
+		height: 600px;
+	}
+	.footer p {
+		padding-top: 5vh;
 	}
 }
